--- a/product details.html
+++ b/product details.html
@@ -30,6 +30,7 @@
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/prod.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -185,6 +186,239 @@
         </div>
     </div>
     <!-- Page Header End -->
+    <div class="container">
+      <header>
+
+      </header>
+
+      <section class="main">
+        <div class="default gallery">
+          <div class="main-img">
+            <img
+              class="active"
+              src="images/image-product-1.jpg"
+              alt="product-img"
+            />
+            <img src="images/image-product-2.jpg" alt="product-img" />
+            <img src="images/image-product-3.jpg" alt="product-img" />
+            <img src="images/image-product-4.jpg" alt="product-img" />
+          </div>
+          <div class="thumb-list">
+            <div class="active">
+              <img
+                src="images/image-product-1-thumbnail.jpg"
+                alt="product-img"
+              />
+            </div>
+            <div>
+              <img
+                src="images/image-product-2-thumbnail.jpg"
+                alt="product-img"
+              />
+            </div>
+            <div>
+              <img
+                src="images/image-product-3-thumbnail.jpg"
+                alt="product-img"
+              />
+            </div>
+            <div>
+              <img
+                src="images/image-product-4-thumbnail.jpg"
+                alt="product-img"
+              />
+            </div>
+          </div>
+        </div>
+
+        <div class="lightbox">
+          <div class="gallery">
+            <div class="main-img">
+              <!-- icons -->
+              <span class="icon-close">
+                <svg width="144" height="145" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z"
+                    fill="#69707D"
+                    fill-rule="evenodd"
+                  />
+                </svg>
+              </span>
+              <span class="icon-prev">
+                <svg width="12" height="18" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M11 1 3 9l8 8"
+                    stroke="#1D2026"
+                    stroke-width="3"
+                    fill="none"
+                    fill-rule="evenodd"
+                  />
+                </svg>
+              </span>
+              <span class="icon-next">
+                <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="m2 1 8 8-8 8"
+                    stroke="#1D2026"
+                    stroke-width="3"
+                    fill="none"
+                    fill-rule="evenodd"
+                  />
+                </svg>
+              </span>
+
+              <!-- main images -->
+              <img
+                class="active"
+                src="images/image-product-1.jpg"
+                alt="product-img"
+              />
+              <img src="images/image-product-2.jpg" alt="product-img" />
+              <img src="images/image-product-3.jpg" alt="product-img" />
+              <img src="images/image-product-4.jpg" alt="product-img" />
+            </div>
+            <div class="thumb-list">
+              <div class="active">
+                <img
+                  src="images/image-product-1-thumbnail.jpg"
+                  alt="product-img"
+                />
+              </div>
+              <div>
+                <img
+                  src="images/image-product-2-thumbnail.jpg"
+                  alt="product-img"
+                />
+              </div>
+              <div>
+                <img
+                  src="images/image-product-3-thumbnail.jpg"
+                  alt="product-img"
+                />
+              </div>
+              <div>
+                <img
+                  src="images/image-product-4-thumbnail.jpg"
+                  alt="product-img"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="content">
+
+          <div class="price-info">
+
+          </div>
+          <div class="badges">
+            <h2 class="product-title">Thinai Sakkarai Pongal</h2>
+            <div class="vegetarian-pill flex product-attributes">PURE VEG</div>
+          </div>
+          <div class="badges">
+            <div class="attribute">No Maida</div>
+            <div class="attribute">Best Seller</div>
+            <div class="attribute">No Maida</div>
+            <div class="attribute">Best Seller</div>
+            <div class="attribute">No Maida</div>
+            <div class="attribute">Best Seller</div>
+          </div>
+          <div class="price-container">
+            <span class="original-price">Rs. 169</span>
+            <span class="price">Rs. 166</span>
+            <span class="discount">SAVE 2%</span>
+            <span class="weight">(150g)</span>
+          </div>
+          <div class="rating-container">
+            <span class="star-icon">★</span>
+            <span class="rating-number">4.81</span>
+            
+            <span class="review-text">
+              <span class="verified-icon">     |    ✔</span>
+              569 Verified Reviews
+            </span>
+          </div>
+          <div class="add-to-cart-container">
+            <div class="counter">
+              <button class="minus">
+                <svg
+                  width="12"
+                  height="4"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                >
+                  <defs>
+                    <path
+                      d="M11.357 3.332A.641.641 0 0 0 12 2.69V.643A.641.641 0 0 0 11.357 0H.643A.641.641 0 0 0 0 .643v2.046c0 .357.287.643.643.643h10.714Z"
+                      id="a"
+                    />
+                  </defs>
+                  <use fill="#FF7E1B" fill-rule="nonzero" xlink:href="#a" />
+                </svg>
+              </button>
+              <span class="count">0</span>
+              <button class="plus">
+                <svg
+                  width="12"
+                  height="12"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                >
+                  <defs>
+                    <path
+                      d="M12 7.023V4.977a.641.641 0 0 0-.643-.643h-3.69V.643A.641.641 0 0 0 7.022 0H4.977a.641.641 0 0 0-.643.643v3.69H.643A.641.641 0 0 0 0 4.978v2.046c0 .356.287.643.643.643h3.69v3.691c0 .356.288.643.644.643h2.046a.641.641 0 0 0 .643-.643v-3.69h3.691A.641.641 0 0 0 12 7.022Z"
+                      id="b"
+                    />
+                  </defs>
+                  <use fill="#FF7E1B" fill-rule="nonzero" xlink:href="#b" />
+                </svg>
+              </button>
+            </div>
+            <button class="add-to-cart">
+              <span>
+                <svg width="22" height="20" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z"
+                    fill="#69707D"
+                    fill-rule="nonzero"
+                  />
+                </svg>
+              </span>
+              <span>Add to cart</span>
+            </button>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <section class="culinary-features">
+      <div class="header">
+        <h1>Elevating The Culinary Experience</h1>
+        <p>By exquisite sourcing, impeccable craftsmanship</p>
+      </div>
+      <div class="features-grid">
+        <div class="feature-item">
+          <img src="images/i1.jpg" alt="Quality Assurance Icon">
+          <h3>Quality Assurance</h3>
+          <p>Certified, sourced ingredients, unparalleled authenticity.</p>
+        </div>
+        <div class="feature-item">
+          <img src="images/i2.jpg" alt="Purity Icon">
+          <h3>Purity In Every Bite</h3>
+          <p>All products are free of artificial flavours or added preservatives.</p>
+        </div>
+        <div class="feature-item">
+          <img src="images/i3.jpg" alt="Authenticity Icon">
+          <h3>Crafting Authenticity</h3>
+          <p>We hire our karigars, maintaining our high standards for product excellence.</p>
+        </div>
+        <div class="feature-item">
+          <img src="images/i1.jpg" alt="Excellence Icon">
+          <h3>Excellence</h3>
+          <p>We adhere to global hygiene standards.</p>
+        </div>
+      </div>
+    </section>
 
     <!-- Product Start -->
     <div class="row">
@@ -428,6 +662,80 @@
 
     <!-- Product Ends -->
 
+    <div class="carousel-container">
+      <button class="prev-btn">‹</button>
+      <div class="carousel">
+          <div class="product1">
+              <img src="https://agrasweetsbanjara.com/cdn/shop/files/Motichur-Laddu_1000x1000_3e7ea798-5518-4fc5-a8be-7e5d6b1843d5.jpg?v=1715144170" alt="Motichur Laddu">
+              <h3>Motichur Laddu</h3>
+              <div class="price">₹260</div>
+              <div class="sizes">
+                  <button>250 GRMS</button>
+                  <button>500 GRMS</button>
+              </div>
+              <div class="shelf-life">Shelf Life: 5 Days</div>
+              <button class="check-availability">Check Pincode Availability</button>
+          </div>
+          <div class="product1">
+              <img src="https://agrasweetsbanjara.com/cdn/shop/files/Motichur-Laddu_1000x1000_3e7ea798-5518-4fc5-a8be-7e5d6b1843d5.jpg?v=1715144170" alt="Pista Sticks">
+              <h3>Pista Sticks</h3>
+              <div class="price">₹525</div>
+              <div class="sizes">
+                  <button>250 GRMS</button>
+                  <button>500 GRMS</button>
+              </div>
+              <div class="shelf-life">Shelf Life: 45 Days</div>
+              <button class="check-availability">Check Pincode Availability</button>
+          </div>
+          <div class="product1">
+              <img src="https://agrasweetsbanjara.com/cdn/shop/files/Motichur-Laddu_1000x1000_3e7ea798-5518-4fc5-a8be-7e5d6b1843d5.jpg?v=1715144170" alt="Kaju Katli">
+              <h3>Kaju Katli</h3>
+              <div class="price">₹536</div>
+              <div class="sizes">
+                  <button>250 GRMS</button>
+                  <button>500 GRMS</button>
+              </div>
+              <div class="shelf-life">Shelf Life: 30 Days</div>
+              <button class="check-availability">Check Pincode Availability</button>
+          </div>
+          <!-- Duplicated Cards for Carousel Effect -->
+          <div class="product1">
+              <img src="https://agrasweetsbanjara.com/cdn/shop/files/Motichur-Laddu_1000x1000_3e7ea798-5518-4fc5-a8be-7e5d6b1843d5.jpg?v=1715144170" alt="Motichur Laddu">
+              <h3>Motichur Laddu</h3>
+              <div class="price">₹260</div>
+              <div class="sizes">
+                  <button>250 GRMS</button>
+                  <button>500 GRMS</button>
+              </div>
+              <div class="shelf-life">Shelf Life: 5 Days</div>
+              <button class="check-availability">Check Pincode Availability</button>
+          </div>
+          <div class="product1">
+              <img src="https://agrasweetsbanjara.com/cdn/shop/files/Motichur-Laddu_1000x1000_3e7ea798-5518-4fc5-a8be-7e5d6b1843d5.jpg?v=1715144170" alt="Pista Sticks">
+              <h3>Pista Sticks</h3>
+              <div class="price">₹525</div>
+              <div class="sizes">
+                  <button>250 GRMS</button>
+                  <button>500 GRMS</button>
+              </div>
+              <div class="shelf-life">Shelf Life: 45 Days</div>
+              <button class="check-availability">Check Pincode Availability</button>
+          </div>
+          <div class="product1">
+              <img src="https://agrasweetsbanjara.com/cdn/shop/files/Motichur-Laddu_1000x1000_3e7ea798-5518-4fc5-a8be-7e5d6b1843d5.jpg?v=1715144170" alt="Kaju Katli">
+              <h3>Kaju Katli</h3>
+              <div class="price">₹536</div>
+              <div class="sizes">
+                  <button>250 GRMS</button>
+                  <button>500 GRMS</button>
+              </div>
+              <div class="shelf-life">Shelf Life: 30 Days</div>
+              <button class="check-availability">Check Pincode Availability</button>
+          </div>
+      </div>
+      <button class="next-btn">›</button>
+    </div>
+
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
@@ -500,6 +808,10 @@
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/parallax/parallax.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
+
+    <script src="js/mainpro.js"></script>
+    <script src="js/slider.js" ></script>
+    <script src="js/cart.js" ></script>
 
     <script>
         const thumbnails = document.querySelectorAll('.product-thumbnails img');
