Header Changes Done

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       
             <!-- Navigation Links -->
             <div class="col-lg-4 py-1">
-              <ul class="navbar-nav list-unstyled mt-1 d-flex flex-row gap-3 gap-lg-5 justify-content-center flex-wrap align-items-center text-dark">
+              <ul class="navbar-nav opt-nav list-unstyled d-flex flex-row gap-3 gap-lg-5 justify-content-center flex-wrap align-items-center text-dark">
                 <li class="nav-item nav-link">
                   <a href="index.html" class="nav-link">Home</a>
                 </li>
