Header Font Changes Done

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
         </div>
     </nav> -->
-    <header>
+    <header class="header">
         <div class="container-fluid">
           <div class="row py-3 border-bottom align-items-center">
             <!-- Logo Section -->
