Vijay Local Commit

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     <!-- About Start -->
     <div class="container-xxl py-5" id="section_2">
         <div class="container">
-            <div class="row g-5 align-items-end">
+            <div class="row g-5 align-items-start">
                 <div class="col-lg-6">
                     <div class="row g-2">
                         <div class="col-6 position-relative wow fadeIn" data-wow-delay="0.7s">
@@ -370,6 +370,9 @@
                     <p class="section-title bg-white text-start text-primary pe-3">About Us</p>
                     <h1 class="mb-4">Delicious, Nutritious, Authentic taste of the South.</h1>
                     <p class="mb-4">Bharath Snacks is an accomplished Manufacturer, Exporter and Supplier of ready to eat Indian Sweets and Savories. It was founded in the year 1974. With over four decades of experience in business, we strive to continuously raise our benchmark by providing products of the highest quality and taste.</p>
+                    <a class="btn btn-secondary rounded-pill py-3 px-5" href="">Explore More</a>
+                </div>
+                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <div class="row g-5 pt-2 mb-5">
                         <div class="col-sm-6">
                             <img class="img-fluid mb-4" src="img/award.png" alt="">
@@ -382,7 +385,6 @@
                             <span>Swift and on-schedule every time.</span>
                         </div>
                     </div>
-                    <a class="btn btn-secondary rounded-pill py-3 px-5" href="">Explore More</a>
                 </div>
             </div>
         </div>
