About us section change (Start Para Adjust)

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             <div class="row g-5 align-items-start">
                 <div class="col-lg-6">
                     <div class="row g-2">
-                        <div class="col-6 position-relative wow fadeIn" data-wow-delay="0.7s">
+                        <div class="col-6 position-relative wow fadeIn " data-wow-delay="0.7s">
                             <div class="about-experience bg-secondary rounded">
                                 <h1 class="display-1 mb-0" style="color: goldenrod;">50</h1>
                                 <small class="fs-5 fw-bold">Years, since 1974</small>
@@ -367,13 +367,38 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                <div class="col-lg-6 wow fadeIn py-2" data-wow-delay="0.5s">
                     <p class="section-title bg-white text-start text-primary pe-3">About Us</p>
-                    <h1 class="mb-4">Delicious, Nutritious, Authentic taste of the South.</h1>
+                    <h1 class="my-4">Delicious, Nutritious, Authentic taste of the South.</h1>
                     <p class="mb-4">Bharath Snacks is an accomplished Manufacturer, Exporter and Supplier of ready to eat Indian Sweets and Savories. It was founded in the year 1974. With over four decades of experience in business, we strive to continuously raise our benchmark by providing products of the highest quality and taste.</p>
+                    <a class="btn btn-secondary rounded-pill py-3 px-5 my-3" href="about.html">Explore More</a>
                 </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <div class="row g-5 pt-2 mb-5">
+                <div class="wow fadeIn" data-wow-delay="0.5s">
+                    <div class="row g-5 pt-4">
+                        <div class="col-sm-3">
+                            <img class="img-fluid mb-4" src="img/award.png" alt="">
+                            <h5 class="mb-3">Quality matters!</h5>
+                            <span>Excellence in every detail.</span>
+                        </div>
+                        <div class="col-sm-3">
+                            <img class="img-fluid mb-4" src="img/bnac/del.png" alt="">
+                            <h5 class="mb-3">Delivery On-Time</h5>
+                            <span>Swift and on-schedule every time.</span>
+                        </div>
+                        <div class="col-sm-3">
+                            <img class="img-fluid mb-4" src="img/award.png" alt="">
+                            <h5 class="mb-3">Quality matters!</h5>
+                            <span>Excellence in every detail.</span>
+                        </div>
+                        <div class="col-sm-3">
+                            <img class="img-fluid mb-4" src="img/bnac/del.png" alt="">
+                            <h5 class="mb-3">Delivery On-Time</h5>
+                            <span>Swift and on-schedule every time.</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                    <div class="row g-5 pt-4">
                         <div class="col-sm-6">
                             <img class="img-fluid mb-4" src="img/award.png" alt="">
                             <h5 class="mb-3">Quality matters!</h5>
@@ -385,8 +410,7 @@
                             <span>Swift and on-schedule every time.</span>
                         </div>
                     </div>
-                    <a class="btn btn-secondary rounded-pill py-3 px-5" href="about.html">Explore More</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
