Our Products Change

--- a/index.html
+++ b/index.html
@@ -436,8 +436,8 @@
                             <div class="service-icon">
                                 <img class="img-fluid rounded-circle" src="img/bnac/all.png" alt="">
                             </div>
-                            <h5 class="mb-3">Gift Boxes</h4>
-                            <p class="mb-4">Wrap your love in our beautiful gift boxes.</p>
+                            <h5 class="mb-3" style="color: white;">Gift Boxes</h4>
+                            <p class="mb-4" style="color: white;">Wrap your love in our beautiful gift boxes.</p>
                             <a class="btn btn-square rounded-circle" href=""><i class="bi bi-chevron-double-right"></i></a>
                         </div>
                     </div>
@@ -451,8 +451,8 @@
                             <div class="service-icon">
                                 <img class="img-fluid rounded-circle" src="img/bnac/muruku.png" alt="">
                             </div>
-                            <h5 class="mb-3">Snacks</h5>
-                            <p class="mb-4">Satisfy your cravings with our delicious snacks.</p>
+                            <h5 class="mb-3" style="color: white;">Snacks</h5>
+                            <p class="mb-4" style="color: white;">Satisfy your cravings with our delicious snacks.</p>
                             <a class="btn btn-square rounded-circle" href=""><i class="bi bi-chevron-double-right"></i></a>
                         </div>
                     </div>
@@ -466,8 +466,8 @@
                             <div class="service-icon">
                                 <img class="img-fluid rounded-circle" src="img/bnac/rusk.png" alt="">
                             </div>
-                            <h5 class="mb-3">Bakery</h5>
-                            <p class="mb-4">Indulge in the sweetness of our freshly baked treats.</p>
+                            <h5 class="mb-3" style="color: white;">Bakery</h5>
+                            <p class="mb-4" style="color: white;">Indulge in the sweetness of our freshly baked treats.</p>
                             <a class="btn btn-square rounded-circle" href=""><i class="bi bi-chevron-double-right"></i></a>
                         </div>
                     </div>
