--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                                         <img class="img-fluid" src="img/bnac/ka.png" alt="">
                                         <div class="product-overlay">
                                             <a class="btn btn-square btn-secondary rounded-circle m-1" href=""><i class="bi bi-heart"></i></a>
-                                            <a class="btn btn-square btn-secondary rounded-circle m-1" href=""><i class="bi bi-cart"></i></a>
+                                            <a class="btn btn-square btn-secondary rounded-circle m-1" href="product details.html"><i class="bi bi-cart"></i></a>
                                         </div>
                                     </div>
                                     <div class="text-center p-4">
