--- a/product details.html
+++ b/product details.html
@@ -384,7 +384,7 @@
                   />
                 </svg>
               </span>
-              <span>Add to cart</span>
+              <span><a href="service.html" style="color: white;">Add to cart</a></span>
             </button>
           </div>
         </div>
