--- a/service.html
+++ b/service.html
@@ -487,8 +487,8 @@
                                     </div>
                                 </div>
                                 <div class="item-price">
-                                    <span class="original-price">$30.78</span>
-                                    <span class="final-price">$25.78</span>
+                                    <span class="original-price">Rs.30</span>
+                                    <span class="final-price">Rs.25</span>
                                 </div>
                                 <button type="button" class="close remove-item position-absolute" aria-label="Close" onclick="removeOrderItem(this)">
                                     <span aria-hidden="true">&times;</span>
@@ -509,8 +509,8 @@
                                     </div>
                                 </div>
                                 <div class="item-price">
-                                    <span class="original-price">$15.78</span>
-                                    <span class="final-price">$10.78</span>
+                                    <span class="original-price">Rs.15</span>
+                                    <span class="final-price">Rs.10</span>
                                 </div>
                                 <button type="button" class="close remove-item position-absolute" aria-label="Close" onclick="removeOrderItem(this)">
                                     <span aria-hidden="true">&times;</span>
@@ -540,32 +540,32 @@
                     <h2>Billing Summary</h2>
                     <div class="billing-details">
                         <div class="row">
-                            <span class="label">Subtotal</span>
-                            <span class="value">$3720.27</span>
+                            <span class="label">Total</span>
+                            <span class="value">Rs.320</span>
                         </div>
                         <div class="row">
                             <span class="label">Discount</span>
-                            <span class="value">-$749.99</span>
+                            <span class="value">-Rs.79</span>
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <span class="label">Warranty (Platinum)</span>
                             <span class="value">
                                 $259.99 <a href="#" class="remove-link">Remove</a>
                             </span>
-                        </div>
+                        </div> -->
                         <div class="row">
                             <span class="label">Shipping</span>
-                            <span class="value">$0.00</span>
+                            <span class="value">Rs.30</span>
                         </div>
                         <div class="row">
-                            <span class="label">Tax</span>
-                            <span class="value">$228.72</span>
+                            <span class="label">GST</span>
+                            <span class="value">Rs.28</span>
                         </div>
                     </div>
                     <!-- <hr> -->
                     <div class="row total">
                         <span class="label">Grand Total</span>
-                        <span class="value">$3,439.00</span>
+                        <span class="value">Rs.439.00</span>
                     </div>
                     <div class="order-comment">
                         <label for="orderComment">Order Comment</label>
@@ -577,7 +577,7 @@
                             Please check to acknowledge our <a href="#">Privacy & Terms Policy</a>
                         </label>
                     </div>
-                    <button class="pay-button">Pay $3,439.00</button>
+                    <button class="pay-button">Pay Rs.439.00</button>
                     <!-- <div class="security-checkout">
                         <img src="img/norton-security.png" alt="Norton Security Checkout">
                     </div> -->
@@ -647,12 +647,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="fw-semi-bold" href="#">Your Site Name</a>, All Right Reserved.
+                    &copy; <a class="fw-semi-bold" href="#">Bharath Snacks</a>, All Right Reserved.
                 </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">HTML Codex</a>
-                </div>
+                
             </div>
         </div>
     </div>
