--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                 <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                     <p class="section-title bg-white text-center text-primary px-3">Special Products</p>
                 </div>
-                <a href="product.html" class="btn btn-primary">View All</a>
+                <a href="product.html" class="btn btn-primary category-btn active">View All</a>
             </div>
             <div id="bestsellersCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -607,7 +607,7 @@
                     <!-- Second Slide -->
                     <div class="carousel-item">
                         <div class="row gx-4">
-                            <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="col-md-6 mb-3 col-lg-4 col-xl-3">
                                 <div class="product-item">
                                     <div class="position-relative">
                                         <img class="img-fluid" src="img/bnac/ru.png" alt="">
@@ -623,7 +623,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="col-md-6 mb-3 col-lg-4 col-xl-3">
                                 <div class="product-item">
                                     <div class="position-relative">
                                         <img class="img-fluid" src="img/bnac/oorud.png" alt="">
@@ -639,7 +639,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="col-md-6 mb-3 col-lg-4 col-xl-3">
                                 <div class="product-item">
                                     <div class="position-relative">
                                         <img class="img-fluid" src="img/bnac/ka.png" alt="">
@@ -655,7 +655,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="col-md-6 mb-3 col-lg-4 col-xl-3">
                                 <div class="product-item">
                                     <div class="position-relative">
                                         <img class="img-fluid" src="img/bnac/all.png" alt="">
