--- a/service.html
+++ b/service.html
@@ -105,7 +105,7 @@
         </div>
     </nav> -->
     <header class="header">
-        <div class="container-fluid">
+        <div class="container-fluid ps-0">
             <div class="row py-1 border-bottom align-items-center justify-content-between">
                 <!-- Hamburger Menu Icon -->
                 <div class="col-2 d-flex align-items-center d-lg-none">
