--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
                 </div>
                 <div class="wow fadeIn" data-wow-delay="0.5s">
                     <div class="text-center mx-auto pb-4 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                        <p class="section-title bg-white text-center text-primary px-3">Our Services</p>
-                        <h1 class="mb-0">Services That We Offer For Our Customers</h1>
+                        <p class="section-title bg-white text-center text-primary px-3 mb-4">Our Services</p>
+                        <h1 class="mt-2 mb-0">Services That We Offer For Our Customers</h1>
                     </div>
                     <div class="row g-5 pt-4">
                         <div class="col-sm-3">
@@ -482,7 +482,7 @@
                             </div>
                             <h5 class="mb-3" style="color: white;">Sweets</h4>
                             <p class="mb-4" style="color: white;">Wrap your love with our sweets.</p>
-                            <a class="btn btn-square rounded-circle" href=""><i class="bi bi-chevron-double-right"></i></a>
+                            <a class="btn btn-square rounded-circle" href="product.html"><i class="bi bi-chevron-double-right" style="color: brown;"></i></a>
                         </div>
                     </div>
                 </div>
@@ -497,7 +497,7 @@
                             </div>
                             <h5 class="mb-3" style="color: white;">Snacks</h5>
                             <p class="mb-4" style="color: white;">Satisfy your cravings with our delicious snacks.</p>
-                            <a class="btn btn-square rounded-circle" href=""><i class="bi bi-chevron-double-right"></i></a>
+                            <a class="btn btn-square rounded-circle" href="product.html"><i class="bi bi-chevron-double-right " style="color: brown;"></i></a>
                         </div>
                     </div>
                 </div>
@@ -512,7 +512,7 @@
                             </div>
                             <h5 class="mb-3" style="color: white;">Bakery</h5>
                             <p class="mb-4" style="color: white;">Indulge in the sweetness of our freshly baked treats.</p>
-                            <a class="btn btn-square rounded-circle" href=""><i class="bi bi-chevron-double-right"></i></a>
+                            <a class="btn btn-square rounded-circle" href="product.html"><i class="bi bi-chevron-double-right" style="color: brown;"></i></a>
                         </div>
                     </div>
                 </div>
@@ -529,8 +529,11 @@
                 <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                     <p class="section-title bg-white text-center text-primary px-3">Special Products</p>
                 </div>
-                <a href="product.html" class="btn btn-primary category-btn active">View All</a>
+                <a href="product.html" class="view-all-icon">
+                    <img src="img/icons/fast-forward.gif" alt="View All" class="view-all-img">
+                </a>
             </div>
+            
             <div id="bestsellersCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <!-- First Slide -->
@@ -852,7 +855,9 @@
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="section-title bg-white text-center text-primary px-3">PRODUCTS YOU MAY LIKE</p>
             </div>
-            <a href="product.html" class="btn category-btn">View All</a>
+            <a href="product.html" class="view-all-icon">
+                <img src="img/icons/fast-forward.gif" alt="View All" class="view-all-img">
+            </a>
         </div>
         <div id="bestsellersCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -1128,7 +1133,9 @@
                 <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                     <p class="section-title bg-white text-center text-primary px-3">This Week Special</p>
                 </div>
-                <a href="product.html" class="btn category-btn">View All</a>
+                <a href="product.html" class="view-all-icon">
+                    <img src="img/icons/fast-forward.gif" alt="View All" class="view-all-img">
+                </a>
             </div>
             <div id="bestsellersCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
