Category Image change and Notification Toast Stop on Hover

--- a/product.html
+++ b/product.html
@@ -160,19 +160,19 @@
                     </div>
                     <div class="category-item">
                         <button class="category-btn" data-category="snacks">
-                            <img src="img/icons/la.jpg" alt="Snacks" class="category-icon">
+                            <img src="img/icons/snacks_boy.png" alt="Snacks" class="category-icon">
                         </button>
                         <p class="category-text">Snacks</p>
                     </div>
                     <div class="category-item">
                         <button class="category-btn" data-category="bakery">
-                            <img src="img/icons/bakery-03.jpg" alt="Bakery" class="category-icon">
+                            <img src="img/icons/bakery_img.png" alt="Bakery" class="category-icon">
                         </button>
                         <p class="category-text">Bakery</p>
                     </div>
                     <div class="category-item">
                         <button class="category-btn" data-category="gift-boxes">
-                            <img src="img/bnac/box.jpg" alt="Gift Boxes" class="category-icon">
+                            <img src="img/icons/giftbox.png" alt="Gift Boxes" class="category-icon">
                         </button>
                         <p class="category-text">Gift Boxes</p>
                     </div>
