Navigation Special Products

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                     <!-- First Slide -->
                     <div class="carousel-item active">
                         <div class="row gx-4">
-                            <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="col-md-6 col-lg-4 col-xl-3" onclick="window.location.href='product_details2.html'">
                                 <div class="product-item animated-card">
                                     <div class="position-relative">
                                         <img class="img-fluid" src="img/bnac/ka.png" alt="">
@@ -556,7 +556,7 @@
                                 </div>
                             </div>
                             
-                            <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="col-md-6 col-lg-4 col-xl-3" onclick="window.location.href='product_details2.html'">
                                 <div class="product-item">
                                     <div class="position-relative">
                                         <img class="img-fluid" src="img/bnac/muk.png" alt="">
@@ -572,7 +572,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="col-md-6 col-lg-4 col-xl-3" onclick="window.location.href='product_details2.html'">
                                 <div class="product-item">
                                     <div class="position-relative">
                                         <img class="img-fluid" src="img/bnac/ru.png" alt="">
@@ -588,7 +588,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="col-md-6 col-lg-4 col-xl-3" onclick="window.location.href='product_details2.html'">
                                 <div class="product-item">
                                     <div class="position-relative">
                                         <img class="img-fluid" src="img/bnac/oorud.png" alt="">
@@ -610,7 +610,7 @@
                     <!-- Second Slide -->
                     <div class="carousel-item">
                         <div class="row gx-4">
-                            <div class="col-md-6 mb-3 col-lg-4 col-xl-3">
+                            <div class="col-md-6 mb-3 col-lg-4 col-xl-3" onclick="window.location.href='product_details2.html'">
                                 <div class="product-item">
                                     <div class="position-relative">
                                         <img class="img-fluid" src="img/bnac/ru.png" alt="">
@@ -626,7 +626,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 mb-3 col-lg-4 col-xl-3">
+                            <div class="col-md-6 mb-3 col-lg-4 col-xl-3" onclick="window.location.href='product_details2.html'">
                                 <div class="product-item">
                                     <div class="position-relative">
                                         <img class="img-fluid" src="img/bnac/oorud.png" alt="">
@@ -642,7 +642,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 mb-3 col-lg-4 col-xl-3">
+                            <div class="col-md-6 mb-3 col-lg-4 col-xl-3" onclick="window.location.href='product_details2.html'">
                                 <div class="product-item">
                                     <div class="position-relative">
                                         <img class="img-fluid" src="img/bnac/ka.png" alt="">
@@ -658,7 +658,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 mb-3 col-lg-4 col-xl-3">
+                            <div class="col-md-6 mb-3 col-lg-4 col-xl-3" onclick="window.location.href='product_details2.html'">
                                 <div class="product-item">
                                     <div class="position-relative">
                                         <img class="img-fluid" src="img/bnac/all.png" alt="">
