--- a/index.html
+++ b/index.html
@@ -714,10 +714,10 @@
     
 
     <!-- Banner Start -->
-    <div class="container-fluid banner my-5 py-5" style="position: relative; background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(3px); border-radius: 10px;" data-parallax="scroll" data-image-src="img/bnac/w3.png">
+    <div class="container-fluid banner my-5 py-5" style="position: relative; background: rgba(255, 255, 255, 0.1); border-radius: 10px;" data-parallax="scroll" data-image-src="img/bnac/w3.gif">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.3s">
+                <!-- <div class="col-lg-6 wow fadeIn" data-wow-delay="0.3s">
                     <div class="row g-4 align-items-center">
                         <div class="col-sm-4">
                             <img class="img-fluid rounded" src="img/bnac/sev.png" alt="">
@@ -728,8 +728,8 @@
                             <a class="btn btn-secondary rounded-pill py-2 px-4" href="">Read More</a>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                </div> -->
+                <div class="col-lg-6" style="visibility: hidden;">
                     <div class="row g-4 align-items-center">
                         <div class="col-sm-4">
                             <img class="img-fluid rounded" src="img/bnac/wordelivy.png" alt="">
